# DeepSplines

./: .gitignore  LICENSE  README.md  README.rst  dataloader.py  datasets.py  ds_utils.py  main.py  manager.py  myjson.py  project.py  pycsou_README.rst  pyproject.toml  setup.cfg  setup.py  struct_default_values.py
data/circle/: test_data.pth  train_data.pth  valid_data.pth
data/s_shape/: test_data.pth  train_data.pth  valid_data.pth
deepsplines/: __init__.py  basemodel.py  dataloader.py  datasets.py  deepBspline.py  deepBspline_base.py  deepBspline_explicit_linear.py  deepReLUspline.py  deepspline_base.py  ds_utils.py  dsnn.py  main.py  manager.py  project.py  struct_default_values.py
deepsplines/ds_modules/: __init__.py  basemodel.py  deepBspline.py  deepBspline_base.py  deepBspline_explicit_linear.py  deepReLUspline.py  dsnn.py
deepsplines/modules/: __init__.py  basemodel.py  deepBspline.py  deepBspline_base.py  deepBspline_explicit_linear.py  deepReLUspline.py  deepspline_base.py  dsnn.py
deepsplines/networks/: __init__.py  convnet_mnist.py  nin_cifar.py  resnet_cifar.py  twoDnet.py
deepsplines/scripts/: approximate_parabola.py  deepsplines_tutorial.py  generate_save_twoD_dataset.py  plot_activations.py  plot_deepspline_basis.py  plot_sparsity_error_rate_lipschitz_bound_vs_lmbda.py  print_ckpt_params_acc.py  run_nin_cifar.py  run_resnet32_cifar.py  run_twoDnet.py  sparsify_with_optimal_knot_threshold.py
models/: __init__.py  apl.py  basemodel.py  convnet_mnist.py  deepBspline.py  deepBspline_base.py  deepBspline_explicit_linear.py  deepBspline_superposition.py  deepReLUspline.py  deepRelu.py  deepspline_base.py  deepspline_module.py  dsnn.py  hybrid_deepspline.py  nin.py  nin_cifar.py  nin_linear.py  resnet.py  resnet_cifar.py  resnet_linear.py  simplenet.py  simplestnet.py  twoDnet_onehidden.py  twoDnet_twohidden.py
networks/: __init__.py  convnet_mnist.py  nin_cifar.py  resnet_cifar.py  twoDnet.py  twoDnet_onehidden.py  twoDnet_twohidden.py
scripts/: approximate_parabola.py  check_batch_norm.py  deepsplines_tutorial.py  example_usage.py  generate_save_twoD_dataset.py  get_activation_input_statistics.py  plot_activations.py  plot_deepspline_basis.py  plot_sparsity_error_rate_lipschitz_bound_vs_lmbda.py  print_ckpt_params_acc.py  prox_approximate_parabola.py  run_nin_cifar.py  run_resnet32_cifar.py  run_twoDnet.py  search_run.py  sparsify_with_optimal_knot_threshold.py  sparsify_with_optimal_slope_threshold.py
scripts/bash/: apl_cifar100_nin.sh  cifar10_deepBspline_superposition.sh  mnist_simplestnet_deepBspline.sh  mnist_simplestnet_deepBspline_superposition.sh  mnist_simplestnet_standard.sh  multires_cifar10_deepBspline.sh  size_cifar100_deepspline.sh  size_cifar10_deepRelu.sh  size_cifar10_deepspline.sh  twoDnet_lipschitz_single_lmbda.sh
scripts/gridsearch/twoD/: apl_twoD.py  (+3 more)
scripts/jsonscripts/: avg_results_json.py  merge_json_experiments.py  merge_json_results.py  sort_json_results.py  sort_results_json.py
scripts/plot/: plot_K_vs_performance.py  plot_activations.py  plot_deepspline_basis.py  plot_math_finite_spline.py  plot_sparsity_error_rate_lipschitz_bound_vs_lmbda.py  replot_test_imgs.py
scripts/runs/: batch_model_runs.py  deepspline_vs_deeprelu.py  deepspline_vs_deeprelu_vs_apl.py  model_runs.py
scripts/tests/: P_P_inv_test.py  deepspline_superposition_tests.py  deepspline_tests.py  hybrid_approximate_parabola_test.py  multires_scheduler_tests.py  parabola_gradients_test.py  regularization_gradients_test.py  test_assign_components_flatten_structure.py  test_dict_merge.py
(+4 files in other folders)
