[metadata]
name = DeepSplines
# also change in deepsplines.__init__.py
version = 0.1.0
author = Joaquim Campos
author_email = joaquimcampos15@hotmail.com
description = A framework to train the activation functions of a neural network
long_description = file: README.md, LICENSE
long_description_content_type = text/markdown
url = https://github.com/joaquimcampos/DeepSplines
keywords =
    activation functions
    B-splines
    deep learning
    regularization
    sparsity
project_urls =
    Bug Tracker = https://github.com/joaquimcampos/DeepSplines/issues
license = MIT
classifiers =
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: Developers
    Topic :: Scientific/Engineering :: Artificial Intelligence
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Programming Language :: Python :: 3

[options]
package_dir =
    = deepsplines
packages = find:
zip_safe = False
include_package_data = True
python_requires = >=3.7
install_requires =
    numpy >= 1.10
    pytorch >= 1.5.1
    torchvision >= 0.2.2
    matplotlib >= 3.3.1
scripts =
    main.py
    deepsplines/scripts/approximate_parabola.py
    deepsplines/scripts/deepsplines_tutorial.py
    deepsplines/scripts/generate_save_twoD_dataset.py
    deepsplines/scripts/plot_activations.py
    deepsplines/scripts/plot_deepspline_basis.py
    deepsplines/scripts/plot_sparsity_error_rate_lipschitz_bound_vs_lmbda.py
    deepsplines/scripts/print_ckpt_params_acc.py
    deepsplines/scripts/run_nin_cifar.py
    deepsplines/scripts/run_resnet32_cifar.py
    deepsplines/scripts/run_twoDnet.py
    deepsplines/scripts/sparsify_with_optimal_knot_threshold.py

[options.extras_require]
dev =
    autopep8
    flake8
    yapf

[options.packages.find]
where = deepsplines

[options.data_files]
data = data/deepspline_basis.png
