[metadata]
name = deepsplines
# also change in deepsplines.__init__.py
version = 0.0.2
author = Joaquim Campos
author_email = joaquimcampos15@hotmail.com
description = A framework to train the activation functions of a neural network
long_description = file: README.md, LICENSE
long_description_content_type = text/markdown
url = https://github.com/joaquimcampos/DeepSplines
keywords =
    activation functions
    B-splines
    deep learning
    regularization
    sparsity
project_urls =
    Bug Tracker = https://github.com/joaquimcampos/DeepSplines/issues
license = MIT
classifiers =
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: Developers
    Topic :: Scientific/Engineering :: Artificial Intelligence
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Programming Language :: Python :: 3

[options]
packages = find:
zip_safe = False
include_package_data = True
python_requires = >=3.7
install_requires =
    numpy >= 1.10
    torch >= 1.5.*
    torchvision >= 0.2.2
    matplotlib >= 3.3.*
scripts =
    deepsplines/main.py
    scripts/approximate_parabola.py
    scripts/deepsplines_tutorial.py
    scripts/generate_save_twoD_dataset.py
    scripts/plot_activations.py
    scripts/plot_deepspline_basis.py
    scripts/plot_sparsity_error_rate_lipschitz_bound_vs_lmbda.py
    scripts/print_ckpt_params_acc.py
    scripts/run_nin_cifar.py
    scripts/run_resnet32_cifar.py
    scripts/run_twoDnet.py
    scripts/sparsify_with_optimal_knot_threshold.py

[options.extras_require]
dev =
    autopep8
    flake8
    yapf

[flake8]
per-file-ignores =
    */__init__.py: F401
ignore = W504
